Fix: Align "show entries" text correctly for cases where the Semantic UI JS is not available on the page

--- a/css/dataTables.semanticui.scss
+++ b/css/dataTables.semanticui.scss
@@ -65,6 +65,12 @@ table.dataTable.table {
 // DataTables' built in feature elements
 div.dataTables_wrapper {
 	div.dataTables_length {
+		// Match the height of the drop down when Semantic UI JS isn't present
+		select {
+			vertical-align: middle;
+			min-height: 2.7142em;
+		}
+
 		.ui.selection.dropdown {
 			min-width: 0;
 		}
